@@ -375,12 +375,9 @@
           ((_ (':emacs-rex ('|swank:frame-source-location-for-emacs| frame)
                            pkg thread id))
            (send dbg `(frame-src-loc ,thread ,frame ,id)))
-          ((_ (':emacs-rex ('|swank:frame-locals-for-emacs| frame)
+          ((_ (':emacs-rex ('|swank:frame-locals-and-catch-tags| frame)
                            pkg thread id))
-           (send dbg `(frame-locals ,thread ,frame ,id)))
-          ((_ (':emacs-rex ('|swank:frame-catch-tags-for-emacs| frame)
-                           pkg thread id))
-           (send dbg `(frame-catchers ,thread ,frame ,id)))
+           (send dbg `(frame-details ,thread ,frame ,id)))
           ((_ (':emacs-rex ('|swank:sldb-disassemble| frame)
                            pkg thread id))
            (send dbg `(disassemble-frame ,thread ,frame ,id)))
@@ -1179,10 +1176,8 @@
            (set state (thread-continue thread id c state)))
           ((,c . ('frame-src-loc thread frame id))
            (reply c (frame-src-loc thread frame state) id))
-          ((,c . ('frame-locals thread frame id))
-           (reply c (frame-locals thread frame state) id))
-          ((,c . ('frame-catchers thread frame id))
-           (reply c (frame-catchers thread frame state) id))
+          ((,c . ('frame-details thread frame id))
+           (reply c (list (frame-locals thread frame state) '()) id))
           ((,c . ('disassemble-frame thread frame id))
            (reply c (disassemble-frame thread frame state) id))
           ((,c . ('thread-frames thread from to id))
@@ -1453,9 +1448,6 @@
                        (val (as <value> (! getValue e))))
                    (pack (list (! name var) val)))))))
       (<java.lang.StackTraceElement> '()))))
-
-(df frame-catchers ((tid <int>) (frame <int>) state)
-  '())
 
 (df disassemble-frame ((tid <int>) (frame <int>) state)
   (mlet ((frame _) (nth-frame tid frame state))
